# building-telegram-boots

./: README.md
bot01-ruby/: step0.rb
bot02-nim/: .gitignore  bot1.nim  bot2.nim  photobot.nim
bot02-nim/hello/: goodmorning.nim
bot02-nim/http_client/: getsome.nim
bot03-crystal/demo/: requesting.cr
bot03-crystal/echo/: README.md  shard.yml
bot03-crystal/hello/: README.md  shard.yml
bot03-crystal/kitty/: README.md  shard.yml
bot03-crystal/mybot/: README.md  shard.yml
bot04-rust/bots/: Cargo.toml
bot04-rust/bots/src/: bot2.rs  bot3.rs  main.rs
bot04-rust/we-have-time/: Cargo.toml
bot05-d/hello/: hello.d
bot05-d/hellobot/: .gitignore  README.md  dub.json  dub.selections.json
bot05-d/samples/: fib_fast.d  fibonacci.d  reverse.d  sorting.d  sorting_many.d
bot05-d/threads/: threads1.d  threads2.d  threads3.d
bot07-clojure/mytelegrambot/: CHANGELOG.md  README.md  project.clj
bot07-clojure/origamibot/: CHANGELOG.md  README.md  project.clj
bot07-clojure/weatherbot/: CHANGELOG.md  README.md  project.clj
bot08-java/invoice-bot/: build.gradle  settings.gradle
bot08-java/java-bot/: build.gradle
bot09-go/fib/: fib.go
bot09-go/gobot1/: go.mod  main.go
bot09-go/gobot2/: go.mod  main.go
bot09-go/sample1/: file.txt  reading.go
bot10-elixir/my_bot/: .gitignore  README.md  mix.exs
bot11-nodejs/bot-with-webhooks/: index.js  package-lock.json  package.json
bot11-nodejs/my-bot/: index.js  (+2 more)
bot12-python/: face_counter_bot.py  fastfib.py  fib.py  fibo3.py  fibo4.py  fibo5.py  get_me.py  opencv_bot.py  photoBot.py  tensorflow_bot.py
(+25 files in other folders)
