[package]
name = "bots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version =  "1.28.2", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "bot1"
path = "src/main.rs"

[[bin]]
name = "bot2"
path = "src/bot2.rs"
